Jr se ajusta swagger
